# multimediatest

./: .gitignore  CMakeLists.txt  Preview.qml  main.cpp  main.qml
